[package]
name = "my_project_name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
winapi = { version = "0.3", features = ["winuser", "winbase"] }
tokio = { version = "1.13.0", features = ["full"] }
